add more properties
